# jupyterapi

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/jupyterapi/: api_utils.py  exceptions.py  jupyterapi.py  models.py  rest_adapter.py
tests/: test_api_utils.py  test_jupyterapi.py
